--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -67,10 +67,19 @@
 
 .grid {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin-left: 0;
   max-width: 800px;
+  margin-top: 3em;
+
+}
+
+.grid img{
+  max-width:100% ;
 }
 
 .card {
